--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "vip-leaderboard",
-  "version": "1.0.0",
-  "description": "Clash of Clans Trophy Leaderboard Discord Bot",
-  "main": "src/index.js",
   "type": "module",
+  "version": "1.0.0",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node keep_alive.js && node src/index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "discord.js": "^14.13.0",
-    "mongoose": "^8.3.4",
-    "node-fetch": "^3.3.2",
-    "cron": "^3.1.0",
-    "chalk": "^5.3.0"
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.0.1",
+    "node-fetch": "^3.4.1"
   }
 }
